Add launch instructions in Readme